# SuperVolleyball

./: .gitmodules  BUILDING.md  CMakeLists.txt  README.md  test.sh
client/: CMakeLists.txt  client.cpp  compile_commands.json  entity.cpp  entity.hpp  input_reader.cpp  input_reader.hpp
core/: CMakeLists.txt  court_definition.hpp  inputs.cpp  inputs.hpp  serialization.hpp  vectors.hpp
core/proto/: entities.capnp  input.capnp
scripts/: build_all.sh  clean.sh  quick_test.sh  rebuild.sh  run_single.sh  test.sh
server/: CMakeLists.txt  compile_commands.json  game_objects.cpp  game_objects.hpp  server.cpp
src/: client.cpp  game_state.cpp  game_state.hpp  network_signals.hpp  server.cpp
